# splendor-ai

./: .gitignore  README.md  agents.md  pyproject.toml
.github/workflows/: test.yml
scripts/: lint_no_init_imports.py  rl_progress_callback.py  rl_tui.py  train_ppo.py
src/splendor/: __init__.py
src/splendor/data/: __init__.py  cards.json  loader.py
src/splendor/game/: __init__.py  actions.py  engine.py  state.py
src/splendor/gui/: __init__.py  __main__.py  constants.py  game_screen.py  main.py  renderer.py
src/splendor/models/: __init__.py  cards.py  gems.py  nobles.py  player.py
src/splendor/rl/: __init__.py  config.py  env.py  features.py  policy.py  rewards.py
tests/: __init__.py  test_actions.py  test_cards.py  test_data.py  test_engine.py  test_gems.py  test_player.py  test_state.py
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/backend/: __init__.py  bot_runner.py  main.py  models.py  rooms.py  schemas.py
web/e2e/: package.json  playwright.config.ts
web/e2e/fixtures/: backend.ts
web/e2e/playwright-report/: index.html
web/e2e/tests/: coin-return-simple.spec.ts  coin-return.spec.ts  gameplay.spec.ts  lobby.spec.ts  multiplayer.spec.ts
web/frontend/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx  router.tsx
web/frontend/src/api/: client.ts
web/frontend/src/components/: ActionButtons.tsx  Card.tsx  CardRow.tsx  GameBoard.tsx  GemBank.tsx  GemToken.tsx  Noble.tsx  PlayerPanel.tsx
web/frontend/src/pages/: Game.tsx  Lobby.tsx
(+1 files in other folders)
