[project]
name = "splendor"
version = "0.1.0"
description = "Splendor board game implementation for reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

rl = [
    "gymnasium>=0.29",
    "numpy>=1.23",
    "stable-baselines3>=2.1",
]

web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splendor"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.dev.scripts]
lint = [
  "ruff check .",
  "python scripts/lint_no_init_imports.py .",
]

